[gd_scene load_steps=11 format=3 uid="uid://pp75bqfyd1c7"]

[ext_resource type="PackedScene" uid="uid://c17wpcxkbfrdu" path="res://Scenes/Stages/Arena.tscn" id="1_2pji2"]
[ext_resource type="Script" path="res://Scenes/Stages/Stage3/stage_3.gd" id="2_2ewuo"]
[ext_resource type="PackedScene" uid="uid://c1agrlsmwqhro" path="res://Scenes/Stages/Stage3/Enemies/ice_3.tscn" id="3_4uo7i"]
[ext_resource type="Texture2D" uid="uid://c28ajfovnisb4" path="res://Assets/Stages/03/Background.png" id="3_8pnay"]
[ext_resource type="PackedScene" uid="uid://brsigomehtq70" path="res://Scenes/Stages/Stage3/Enemies/bomb_3.tscn" id="3_f1goc"]
[ext_resource type="PackedScene" uid="uid://cgy1rkep7gfor" path="res://Scenes/Stages/Stage3/Enemies/enemy_3.tscn" id="3_nfvuv"]
[ext_resource type="PackedScene" uid="uid://3qtt0maf2qi5" path="res://Scenes/Stages/Stage3/Enemies/fire_3.tscn" id="3_yjsbf"]
[ext_resource type="PackedScene" uid="uid://bh2g4oajhc44g" path="res://Scenes/Stages/Stage3/Enemies/booster_3.tscn" id="4_7f45q"]
[ext_resource type="PackedScene" uid="uid://bpcum1ccxig5f" path="res://Scenes/Stages/Stage3/Boss/boss_3.tscn" id="8_twt1d"]
[ext_resource type="PackedScene" uid="uid://b2dwhk54rb6ld" path="res://Scenes/Player/boss_arrow.tscn" id="9_5bu81"]

[node name="Stage3" instance=ExtResource("1_2pji2")]
script = ExtResource("2_2ewuo")
enemy3 = ExtResource("3_nfvuv")
bomb3 = ExtResource("3_f1goc")
fire3 = ExtResource("3_yjsbf")
ice3 = ExtResource("3_4uo7i")
booster3 = ExtResource("4_7f45q")
boss3 = ExtResource("8_twt1d")
bossArrow = ExtResource("9_5bu81")

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="0"]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground" index="0"]
position = Vector2(10, 10)
motion_mirroring = Vector2(2000, 1500)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2" index="0"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_8pnay")
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="1"]
motion_mirroring = Vector2(2000, 1500)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer" index="0"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_8pnay")
centered = false

[node name="EnemySpawnTimer" parent="World" index="2"]
wait_time = 0.5

[node name="EnemySpawnTimer2" type="Timer" parent="World" index="3"]
wait_time = 2.0

[node name="EnemySpawnTimer3" type="Timer" parent="World" index="4"]
wait_time = 2.0

[node name="EnemySpawnTimer4" type="Timer" parent="World" index="5"]
wait_time = 2.0

[node name="BoostSpawnTimer" type="Timer" parent="World" index="7"]

[node name="BoostEnableTimer" type="Timer" parent="World" index="8"]
wait_time = 120.0
one_shot = true
autostart = true

[node name="FireIces" type="Node2D" parent="World" index="11"]

[connection signal="timeout" from="World/EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="World/EnemySpawnTimer2" to="." method="_on_enemy_spawn_timer_2_timeout"]
[connection signal="timeout" from="World/EnemySpawnTimer3" to="." method="_on_enemy_spawn_timer_3_timeout"]
[connection signal="timeout" from="World/EnemySpawnTimer4" to="." method="_on_enemy_spawn_timer_4_timeout"]
[connection signal="timeout" from="World/WaveChangeTimer" to="." method="_on_wave_change_timer_timeout"]
[connection signal="timeout" from="World/BoostSpawnTimer" to="." method="_on_boost_spawn_timer_timeout"]
[connection signal="timeout" from="World/BoostEnableTimer" to="." method="_on_boost_enable_timer_timeout"]
